--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --watchAll --coverage --setupFiles dotenv/config -i",
     "migrate": "node-pg-migrate",
     "migrate:test": "node-pg-migrate -f config/database/test.json",
-    "fix": "npx standard --fix"
+    "fix": "npx standard --fix",
+    "lint": "npx eslint src"
   },
   "standard": {
     "env": [
